src/test/deca/context/invalid/classes/duplicate_field_same_class.deca
// Description :
//    Deux champs avec le même nom dans une même classe.
//
// Resultats :
//    Erreur contextuelle
//    Ligne 10 : Le champ x est déjà défini dans cette classe ou hérité

class A {
    int x;
    float x;
}

{
}

